
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "value_iteration"
version = "1.0.0"
maintainers = [
  { name="Sophie Brimble", email="s.brimble1@lancaster.ac.uk" },
]
authors = [
  { name="Sophie Brimble", email="s.brimble1@lancaster.ac.uk"},
]
description = "Function which performs value iteration for a given set of states, set of actions, transition probability function and reward function."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
   
]

[project.urls]
homepage = "https://github.com/slbrimble/Value-Iteration"